homelab/templates/home-assistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  annotations:
    traefik.frontend.passHostHeader: "false"
spec:
  tls:
    - secretName: "le-cert"
    - hosts:
        - home.sethpyle.com
  rules:
    - host: home.sethpyle.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
